[tool.poetry]
name = "behave-selenium"
version = "0.1.0"
description = "Example bahave selenium tests"
authors = ["support@trustpayments.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyotp = "^2.4"
behave = "^1.2"
selenium = "^3.141"
pyioc = "^0.3.0"
attrdict = "^2.0.1"
wiremock = "^2.0"
assertpy = "^1.1"
PyJWT = "^1.7.1"
Pillow = "^8.0.0"
faker = "^4.1.3"
retry = "^0.9.2"
webdriver-manager = "^3.2.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
